@@ -14,6 +14,7 @@
 - Blood will follow character's head when needed;
 - Fixed a bug that let a dead PC enter the battle mode;
 - Applying Character's displacement;
+- Showing base attribute at skill's window;
 
 ================================================
 |               Version 0.5.1                  |
